--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^5.6.6",
     "multer": "^1.4.2",
     "nodemailer": "^6.3.0",
+    "path": "^0.12.7",
     "pdfcrowd": "^4.11.0",
     "sendmail": "^1.6.1",
     "xoauth2": "^1.2.0"
